[WIP] Added Dockerfile